# trading-systems-lab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pages.yml
docs/: index.html  metrics.js  styles.css
exchange_matching_engine/: CMakeLists.txt
exchange_matching_engine/bench/: benchmark.cpp
exchange_matching_engine/include/exchange/: binary_protocol.hpp  latency.hpp  lock_free_queue.hpp  memory_pool.hpp  order_book.hpp  threading.hpp  types.hpp
exchange_matching_engine/src/: demo.cpp  order_book.cpp
exchange_matching_engine/tests/: order_book_tests.cpp
hft_trading_platform/: CMakeLists.txt
hft_trading_platform/data/: sample_market_data.csv
hft_trading_platform/include/hft/: backtester.hpp  exchange_simulator.hpp  order_book.hpp  order_gateway.hpp  risk_engine.hpp  strategy_engine.hpp  types.hpp  udp_feed.hpp
hft_trading_platform/src/: backtest_main.cpp  backtester.cpp  exchange_simulator.cpp  order_book.cpp  order_gateway.cpp  risk_engine.cpp  strategy_engine.cpp  udp_demo.cpp  udp_feed.cpp
hft_trading_platform/tests/: hft_tests.cpp
scripts/: build.ps1  run_demos.ps1  test.ps1
